# voicetotextapp

./: settings.gradle.kts
.github/workflows/: beta-release.yml  release.yml
app/: build.gradle.kts
app/src/androidTest/java/com/offlineinc/voicetotext/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/java/com/offlineinc/voicetotext/: LocalRecognitionService.kt  RemoteRecognitionService.kt  StreamingRecognitionService.kt  WhisperContext.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/offlineinc/voicetotext/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
